--- a/index.html
+++ b/index.html
@@ -4,17 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HNG F.E</title>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <div class="container">
-      <img src="" alt="Mhyke" data-testid="slackUserName" />
-      <section>
+      <img
+        src="https://ca.slack-edge.com/T05FFAA91JP-U05RPD6MSJG-c93d0a0546a6-512"
+        class="main image"
+        alt="Mhyke"
+        data-testid="slackUserName"
+      />
+      <section class="info">
         <h1 class="main slack-name" data-testid="slackDisplayImage">Mhyke</h1>
         <p class="main day" data-testid="currentDayOfTheWeek">day</p>
         <p class="main time" data-testid="currentUTCTime">utc time</p>
-        <p class="main track" data-testid="myTrack">my track</p>
-        <a href="/google.com" class="main gitHub" data-testid="githubURL"
-          >git link</a
+        <p class="main track" data-testid="myTrack">frontend</p>
+        <a
+          href="https://github.com/MhykelB/zuri_F-E_s1.git"
+          class="main gitHub"
+          data-testid="githubURL"
+          >Link to gitHub</a
         >
       </section>
     </div>
