--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         src="https://ca.slack-edge.com/T05FFAA91JP-U05RPD6MSJG-c93d0a0546a6-512"
         class="main image"
         alt="Mhyke"
-        data-testid="slackUserName"
+        data-testid="slackDisplayImage"
       />
       <section class="info">
-        <h1 class="main slack-name" data-testid="slackDisplayImage">Mhyke</h1>
+        <h1 class="main slack-name" data-testid=" slackUserName">Mhyke</h1>
         <p class="main day" data-testid="currentDayOfTheWeek">day</p>
         <p class="main time" data-testid="currentUTCTime">utc time</p>
-        <p class="main track" data-testid="myTrack">frontend</p>
+        <p class="main track" data-testid="myTrack">Frontend</p>
         <a
           href="https://github.com/MhykelB/zuri_F-E_s1.git"
           class="main gitHub"
